tdf#109299 - Shrink to data area on document export

Shrink to data area on either entire document export or expert
configuration (default true). Otherwise, preserve any selection
including leading or trailing empty cells.

Change-Id: I88850dbb194a7ebf9d4e987c5c487b6df3069cdb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/205173
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins